<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jiaotang.xunjian01.MainActivity">


    <Button
        android:text="@string/button_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:id="@+id/button_mission"
        android:textSize="30sp" />

    <Button
        android:text="@string/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_mission"
        android:layout_alignStart="@+id/button_mission"
        android:id="@+id/button_map"
        android:textSize="30sp" />

    <Button
        android:text="@string/button_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_map"
        android:layout_alignRight="@+id/button_map"
        android:layout_alignEnd="@+id/button_map"
        android:layout_marginTop="75dp"
        android:id="@+id/button_record"
        android:textSize="30sp" />

</RelativeLayout>
