<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jiaotang.xunjian01.MainActivity_record">

    <TextView
        android:text="@string/button_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_record"
        android:textSize="26sp"
        android:layout_alignBottom="@+id/button_back"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back"
        android:background="@color/colorPrimary"
        android:textSize="16sp"
        android:onClick="clickBack"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_search"
        android:background="@color/colorPrimary"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView_record"
        android:layout_below="@+id/textView_record"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
