<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_mission"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jiaotang.xunjian01.MainActivity_mission">

    <TextView
        android:text="@string/textView_mission"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/textView_mission"
        android:textSize="26sp"
        android:textStyle="normal|bold"
        android:background="@color/colorPrimary"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif"
        android:layout_alignBottom="@+id/button_back" />

    <Button
        android:text="@string/button_back"
        android:layout_height="wrap_content"
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:textSize="16sp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clickBack"/>

    <Button
        android:text="@string/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_back"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button_search"
        android:background="@color/colorPrimary"
        android:textSize="16sp"/>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_mission"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tabLayout">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Left" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Right" />
    </android.support.design.widget.TabLayout>
    <!--tools:ignore="RelativeOverlap"-->

    <!--<android.support.design.widget.TabLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/textView_mission"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:id="@+id/tabLayout">-->

        <!--&lt;!&ndash;<android.support.design.widget.TabItem&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:text="Left" />&ndash;&gt;-->

        <!--&lt;!&ndash;<android.support.design.widget.TabItem&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:text="Right" />&ndash;&gt;-->
    <!--</android.support.design.widget.TabLayout>-->



    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager_mission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout" >


    </android.support.v4.view.ViewPager>

</RelativeLayout>
